# connect-four

./: CMakeLists.txt  LICENSE  README.md
src/: ai.cpp  ai.h  game.cpp  game.h  grid.cpp  grid.h  gui.cpp  gui.h  main.cpp
